# shelfrat

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  SECURITY.md  deny.toml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  release-please-config.json
.github/: branch-protection.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml
crates/shelfrat/: Cargo.toml
crates/shelfrat/src/: api.rs  auth.rs  config.rs  db.rs  email.rs  error.rs  fts.rs  googlebooks.rs  hardcover.rs  jobs.rs  lib.rs  main.rs  metadata.rs  metaqueue.rs  openlibrary.rs  provider_error.rs  ranking.rs  rate_limiter.rs  scanner.rs  state.rs
crates/shelfrat/src/api/: admin.rs  auth.rs  books.rs  download.rs  health.rs  jobs.rs  oidc.rs  scan.rs  setup.rs  users.rs
crates/shelfrat/src/entities/: app_config.rs  audit_log.rs  author.rs  book.rs  book_author.rs  book_metadata.rs  book_tag.rs  job_run.rs  metadata_provider_attempt.rs  mod.rs  plugin_state.rs  reading_progress.rs  tag.rs  user.rs
crates/shelfrat/src/repositories/: audit_repo.rs  book_repo.rs  config_repo.rs  job_repo.rs  metadata_repo.rs  mod.rs  user_repo.rs
crates/shelfrat/src/services/: admin_service.rs  auth_service.rs  book_service.rs  metadata_service.rs  mod.rs  provider_service.rs  scan_service.rs  user_service.rs
crates/shelfrat/tests/: integration_api.rs  integration_repos.rs
migrations/: 001_initial_schema.sql  002_job_runs.sql  003_provider_attempts.sql  004_metadata_retry_config.sql  005_oidc.sql
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: BookCard.svelte  BookCardSkeleton.svelte  BookDetail.svelte  InfoBox.svelte  LockedField.svelte  ShelfRat.svelte  ThemeToggle.svelte  api.test.ts  api.ts  auth.svelte.ts  auth.test.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/admin/: +layout.svelte  +page.svelte
web/src/routes/admin/audit/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/profile/: +page.svelte
web/src/routes/setup/: +page.svelte
web/static/: theme-init.js
(+6 files in other folders)
