[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
sea-orm = { version = "1", features = ["runtime-tokio-native-tls", "sqlx-sqlite", "macros", "with-chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
argon2 = { version = "0.5", features = ["rand"] }
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Config
dotenvy = "0.15"

# File scanning
sha2 = "0.10"

# Metadata extraction
epub = "2"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# HTTP client (metadata providers)
reqwest = { version = "0.12", features = ["json", "native-tls"] }
