[package]
name = "shelfrat"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "shelfrat"

[[bin]]
name = "shelfrat"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
rand_core.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dotenvy.workspace = true
sha2.workspace = true
epub.workspace = true
lettre.workspace = true
reqwest.workspace = true
